tests/parser/command_form/test_06.m.out
In test_06.m, line 4
|   wibble a b  % wibble('a', 'b')
|          ^ error: expected NEWLINE, found CARRAY instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
